# NativeDemo

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ljy/ljynative/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: CMakeLists.txt
native/src/main/cpp/demo/: CMakeLists.txt
native/src/main/cpp/demo/src/: demo.cpp
native/src/main/java/com/ljy/nlib/: TcNativeLib.java
